[gd_scene load_steps=2 format=3 uid="uid://bv6f7fwl4j3a2"]

[ext_resource type="Script" path="res://scenes/challenge/challenge_ui.gd" id="1_ww84l"]

[node name="ChallengeUI" type="CanvasLayer"]
layer = 6
script = ExtResource("1_ww84l")

[node name="Panel" type="Panel" parent="."]
offset_left = 5.0
offset_top = 100.0
offset_right = 90.0
offset_bottom = 150.0

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5


[node name="Label" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Challenge Mode"
horizontal_alignment = 1


[node name="TimerLabel" type="Label" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 12
text = "00:10"
horizontal_alignment = 1


[node name="ChallengeButton" type="Button" parent="Panel/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 10
text = "Time Trial" 
